# learn-WASM

./: README.md
docs/: concepts-best-practices.md  getting-started.md  introduction.md  new-features-2025.md  tooling.md  use-cases.md
examples/ffmpeg/gif_maker/ts/: README.md  package-lock.json  package.json
examples/ffmpeg/gif_maker/ts/src/: App.tsx  index.tsx
examples/wasm/c_example/: README.md  compile.sh  factorial.c  index.html  script.js
examples/wasm/csharp_example/: README.md  build.sh  index.html  script.js
examples/wasm/csharp_example/CSharpWasmLib/: CSharpWasmLib.csproj  MyLibrary.cs
examples/wasm/go_example/: README.md  compile.sh  index.html  main.go  script.js
examples/wasm/rust_example/: README.md  index.html  script.js
examples/wasm/rust_example/rust_src/: Cargo.toml
examples/wasm/rust_example/rust_src/src/: lib.rs
examples/wasm/swift_example/: Package.swift  README.md  build.sh  custom_index.html
examples/wasm/swift_example/Sources/SwiftWasmExampleApp/: main.swift
ffmpeg/: Getting Started.md  package-lock.json  package.json
ffmpeg/gif_maker/js/: package-lock.json  package.json
ffmpeg/gif_maker/js/src/: App.css  App.js
ffmpeg/gif_maker/ts/src/: App.tsx
ffmpeg/public/: index.html  manifest.json
