[package]
name = "rust_wasm_example"
version = "0.1.0"
authors = ["Your Name <you@example.com>"] # Replace with actual author if desired
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
